mess around with keras/tensorflow, cudnn broken currently

--- a/scml-SuperiorColliculusCompetition.ipynb
+++ b/scml-SuperiorColliculusCompetition.ipynb
@@ -23,8 +23,8 @@
     "\n",
     "# a little normalization for the movie (assuming that the movie is 3D array)\n",
     "def normalize(inputmovie):\n",
-    "    movie_mean = np.mean(inputmovie)\n",
-    "    movie_std = np.std(inputmovie)\n",
+    "    movie_mean = np.mean(inputmovie, axis=(0, 1, 2))\n",
+    "    movie_std = np.std(inputmovie, axis=(0, 1, 2))\n",
     "    return (inputmovie - movie_mean) / movie_std\n",
     "\n",
     "movie_norm = normalize(movie)"
@@ -156,7 +156,7 @@
     }
    ],
    "source": [
-    "# here's the modeling part. I'll give just a starting point\n",
+    "# here's the moeling part. I'll give just a starting point\n",
     "\n",
     "import keras\n",
     "from keras.layers import LSTM, Activation, Dense, BatchNormalization\n",
