add start of entries

--- a/timedistrib-conv.ipynb
+++ b/timedistrib-conv.ipynb
@@ -2,33 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "time_distributed_1 (TimeDist (None, 150, 126, 94, 10)  100       \n",
-      "_________________________________________________________________\n",
-      "time_distributed_2 (TimeDist (None, 150, 63, 47, 10)   0         \n",
-      "_________________________________________________________________\n",
-      "time_distributed_3 (TimeDist (None, 150, 29610)        0         \n",
-      "_________________________________________________________________\n",
-      "time_distributed_4 (TimeDist (None, 150, 10)           296110    \n",
-      "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 150, 54)           594       \n",
-      "=================================================================\n",
-      "Total params: 296,804\n",
-      "Trainable params: 296,804\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n",
-      "Train on 230 samples, validate on 58 samples"
+     "ename": "ValueError",
+     "evalue": "cannot reshape array of size 1 into shape (288,150,128,96,1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-a8797ff38b74>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mmovie\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatafile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'trainingmovie_norm'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# normalized movie\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mfrhist\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdatafile\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'FRhist_tr'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# firing rate histograms\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0mmovie\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmovie\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m288\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m150\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m128\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m96\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: cannot reshape array of size 1 into shape (288,150,128,96,1)"
      ]
     }
    ],
@@ -80,9 +65,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
