finish brevity entry, mess around more with conv model

--- a/timedistrib-dense.ipynb
+++ b/timedistrib-dense.ipynb
@@ -22,56 +22,15 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "time_distributed_1 (TimeDist (None, 150, 50)           614450    \n",
-      "_________________________________________________________________\n",
-      "time_distributed_2 (TimeDist (None, 150, 54)           2754      \n",
-      "=================================================================\n",
-      "Total params: 617,204\n",
-      "Trainable params: 617,204\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n",
-      "Train on 230 samples, validate on 58 samples\n",
-      "Epoch 1/200\n",
-      "230/230 [==============================] - 6s 27ms/step - loss: 0.6395 - val_loss: 0.5778\n",
-      "Epoch 2/200\n",
-      "230/230 [==============================] - 4s 20ms/step - loss: 0.5560 - val_loss: 0.5253\n",
-      "Epoch 3/200\n",
-      "230/230 [==============================] - 5s 20ms/step - loss: 0.5054 - val_loss: 0.4806\n",
-      "Epoch 4/200\n",
-      "230/230 [==============================] - 5s 20ms/step - loss: 0.4651 - val_loss: 0.4449\n",
-      "Epoch 5/200\n",
-      "230/230 [==============================] - 5s 20ms/step - loss: 0.4330 - val_loss: 0.4185\n",
-      "Epoch 6/200\n",
-      "230/230 [==============================] - 5s 20ms/step - loss: 0.4089 - val_loss: 0.3988\n",
-      "Epoch 7/200\n",
-      "230/230 [==============================] - 4s 19ms/step - loss: 0.3917 - val_loss: 0.3843\n",
-      "Epoch 8/200\n",
-      "230/230 [==============================] - 5s 20ms/step - loss: 0.3786 - val_loss: 0.3741\n",
-      "Epoch 9/200\n",
-      "230/230 [==============================] - 5s 21ms/step - loss: 0.3691 - val_loss: 0.3653\n",
-      "Epoch 10/200\n",
-      "230/230 [==============================] - 5s 20ms/step - loss: 0.3619 - val_loss: 0.3597\n",
-      "Epoch 11/200\n",
-      "224/230 [============================>.] - ETA: 0s - loss: 0.3566"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import keras\n",
     "from keras.layers import Dense, TimeDistributed\n",
     "\n",
     "model = keras.models.Sequential()\n",
     "\n",
-    "model.add(TimeDistributed(Dense(50, activation='sigmoid'), input_shape=movie.shape[1:]))\n",
-    "# model.add(TimeDistributed(Dense(25, activation='relu')))\n",
+    "model.add(TimeDistributed(Dense(50, activation='relu'), input_shape=movie.shape[1:]))\n",
+    "model.add(TimeDistributed(Dense(25, activation='relu')))\n",
     "# model.add(TimeDistributed(Dense(200, activation='relu')))\n",
     "model.add(TimeDistributed(Dense(frhist.shape[2], activation='softplus')))\n",
     "\n",
@@ -111,7 +70,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
